objects/ASI_KOR_KPI_Point_Target__c.object
<CustomObject>
    <fields>
        <fullName>ASI_KOR_Branch_Name__c</fullName>
        <formula>if(ASI_KOR_Branch__c=&quot;512&quot;, &quot;512-Sales North Seoul Branch&quot;,
if(ASI_KOR_Branch__c=&quot;513&quot;,&quot;513-Sales South Seoul Branch&quot;,
if(ASI_KOR_Branch__c=&quot;530&quot;,&quot;530-Sales Kyunggi South Branch&quot;,
if(ASI_KOR_Branch__c=&quot;531&quot;,&quot;531-Sales Kyunggi North Branch&quot;,
if(ASI_KOR_Branch__c=&quot;521&quot;,&quot;521-Spirit -MOT&quot;,
if(ASI_KOR_Branch__c=&quot;523&quot;,&quot;523-Whisky -MOT&quot;,
if(ASI_KOR_Branch__c=&quot;524&quot;,&quot;524-Whisky TOT North&quot;,
if(ASI_KOR_Branch__c=&quot;525&quot;,&quot;525-Whisky TOT South&quot;,
if(ASI_KOR_Branch__c=&quot;520&quot;,&quot;520-Off Trade&quot;,
if(ASI_KOR_Branch__c=&quot;540&quot;,&quot;540-Sales Kangwon Branch&quot;,
if(ASI_KOR_Branch__c=&quot;550&quot;,&quot;550-Sales Choungcheong Branch&quot;,
if(ASI_KOR_Branch__c=&quot;560&quot;,&quot;560-Sales Honam Branch&quot;,
if(ASI_KOR_Branch__c=&quot;580&quot;,&quot;580-Sales Jeju Branch&quot;,
if(ASI_KOR_Branch__c=&quot;570&quot;,&quot;570-Sales Busan Branch&quot;,
if(ASI_KOR_Branch__c=&quot;571&quot;,&quot;571-Sales Kyungnam Branch&quot;,
if(ASI_KOR_Branch__c=&quot;572&quot;,&quot;572-Sales Kyungbuk Branch&quot;,&quot;Wrong Branch Code!&quot;))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Branch__c</fullName>
        <label>Branch</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Brand_Code__c</fullName>
        <formula>ASI_KOR_Brand_Name__r.ASI_KOR_Brand_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Brand_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Name</label>
        <referenceTo>ASI_KOR_Brand__c</referenceTo>
        <relationshipLabel>KPI Point Targets</relationshipLabel>
        <relationshipName>KPI_Point_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Depletion_Target_Individual__c</fullName>
        <label>Depletion Target - Individual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Fiscal_Month__c</fullName>
        <label>Fiscal Month</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>7</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_KPI_Point_Target__c</fullName>
        <label>KPI Point Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_KPI_Target_Key__c</fullName>
        <externalId>true</externalId>
        <label>KPI Target Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_KOR_KPI_Volume_Target__c</fullName>
        <label>KPI Volume Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Position__c</fullName>
        <label>Position</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Region__c</fullName>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_INFO_Brand_Name__c</fullName>
        <formula>ASI_KOR_Brand_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SYS_INFO_Brand_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_INFO_Record_Type_Name__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SYS_INFO_Record_Type_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Salesman_Code__c</fullName>
        <label>Salesman Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Salesman_Name__c</fullName>
        <label>Salesman Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Salesman_Team__c</fullName>
        <label>Salesman Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Push</fullName>
                </value>
                <value>
                    <fullName>Pull</fullName>
                </value>
                <value>
                    <fullName>Push &amp; Pull</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_Shipment_Target_Individual__c</fullName>
        <label>Shipment Target - Individual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Target_Group__c</fullName>
        <label>Target Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shipment</fullName>
                </value>
                <value>
                    <fullName>Depletion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_YTD_Actual_Update_Date__c</fullName>
        <label>YTD Actual Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_YTD_KPI_POINT_Actual__c</fullName>
        <label>YTD KPI Point Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>KPI Point Target</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_KOR_Fiscal_Year__c</columns>
        <columns>ASI_KOR_Fiscal_Month__c</columns>
        <columns>ASI_KOR_Target_Group__c</columns>
        <columns>ASI_KOR_Region__c</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>ASI_KOR_Salesman_Name__c</columns>
        <columns>ASI_KOR_Salesman_Code__c</columns>
        <columns>ASI_KOR_Brand_Code__c</columns>
        <columns>ASI_KOR_KPI_Point_Target__c</columns>
        <columns>ASI_KOR_KPI_Volume_Target__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_FY1213</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_KOR_Fiscal_Year__c</columns>
        <columns>ASI_KOR_Fiscal_Month__c</columns>
        <columns>ASI_KOR_Target_Group__c</columns>
        <columns>ASI_KOR_Region__c</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>ASI_KOR_Salesman_Name__c</columns>
        <columns>ASI_KOR_Salesman_Code__c</columns>
        <columns>ASI_KOR_Brand_Code__c</columns>
        <columns>ASI_KOR_KPI_Point_Target__c</columns>
        <columns>ASI_KOR_KPI_Volume_Target__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>2012</value>
        </filters>
        <label>All - FY1213</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_FY1314_Temp</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_KOR_Fiscal_Year__c</columns>
        <columns>ASI_KOR_Fiscal_Month__c</columns>
        <columns>ASI_KOR_Target_Group__c</columns>
        <columns>ASI_KOR_Region__c</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>ASI_KOR_Salesman_Name__c</columns>
        <columns>ASI_KOR_Salesman_Code__c</columns>
        <columns>ASI_KOR_Brand_Code__c</columns>
        <columns>ASI_KOR_KPI_Volume_Target__c</columns>
        <columns>ASI_KOR_KPI_Point_Target__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>2013</value>
        </filters>
        <filters>
            <field>ASI_KOR_Salesman_Code__c</field>
            <operation>equals</operation>
            <value>2002022</value>
        </filters>
        <label>All-FY1314-Temp</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Depletion_Target</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_KOR_Fiscal_Year__c</columns>
        <columns>ASI_KOR_Target_Group__c</columns>
        <columns>ASI_KOR_Region__c</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>ASI_KOR_Salesman_Name__c</columns>
        <columns>ASI_KOR_Salesman_Code__c</columns>
        <columns>ASI_KOR_Brand_Code__c</columns>
        <columns>ASI_KOR_KPI_Point_Target__c</columns>
        <columns>ASI_KOR_YTD_KPI_POINT_Actual__c</columns>
        <columns>ASI_KOR_YTD_Actual_Update_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Target_Group__c</field>
            <operation>equals</operation>
            <value>Depletion</value>
        </filters>
        <label>Depletion Target</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Jake_Test</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_KOR_Fiscal_Year__c</columns>
        <columns>ASI_KOR_Fiscal_Month__c</columns>
        <columns>ASI_KOR_Target_Group__c</columns>
        <columns>ASI_KOR_Region__c</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>ASI_KOR_Salesman_Name__c</columns>
        <columns>ASI_KOR_Salesman_Code__c</columns>
        <columns>ASI_KOR_Brand_Code__c</columns>
        <columns>ASI_KOR_KPI_Volume_Target__c</columns>
        <columns>ASI_KOR_KPI_Point_Target__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>2013</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_KOR_KPI_Point_Target__c.ASI_KOR_Salesman</value>
        </filters>
        <label>All-FY1314</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Shipment_Target</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_KOR_Fiscal_Year__c</columns>
        <columns>ASI_KOR_Target_Group__c</columns>
        <columns>ASI_KOR_Region__c</columns>
        <columns>ASI_KOR_Branch__c</columns>
        <columns>ASI_KOR_Salesman_Name__c</columns>
        <columns>ASI_KOR_Salesman_Code__c</columns>
        <columns>ASI_KOR_Brand_Code__c</columns>
        <columns>ASI_KOR_KPI_Point_Target__c</columns>
        <columns>ASI_KOR_YTD_KPI_POINT_Actual__c</columns>
        <columns>ASI_KOR_YTD_Actual_Update_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Target_Group__c</field>
            <operation>equals</operation>
            <value>Shipment</value>
        </filters>
        <label>Shipment Target</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>KPI-{0000}</displayFormat>
        <label>Target ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPI Point Targets</pluralLabel>
    <recordTypes>
        <fullName>ASI_KOR_Branch</fullName>
        <active>true</active>
        <label>Branch</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_KOR_Company</fullName>
        <active>true</active>
        <label>Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_KOR_Country</fullName>
        <active>false</active>
        <label>Country</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_KOR_Region</fullName>
        <active>true</active>
        <label>Region</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_KOR_Salesman</fullName>
        <active>true</active>
        <label>Salesman</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>